# python-p2p-chat

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml  test.yml
p2p_chat/: connection.py  keyboard.py  peer.py  threads.py
test/: test_communication.py  test_peer_networking.py
